# CoRoSensorUI

./: .gitignore  CMakeLists.txt  CoRoSensorUI.pro  README  README.md
cmake/: FindMathGL.cmake  FindQtSerialPort.cmake
src/: circular_buffer.h  communicator.cpp  communicator.h  connection.cpp  finger_data.h  graphics.cpp  log.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
